# Practice-Engine

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.h  chunk.cpp  chunk.h  chunkMesh.cpp  chunkMesh.h  generation.cpp  generation.h  gui.cpp  gui.h  input.cpp  input.h  main.cpp  noise.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  shader.cpp  shader.h  shaderManager.cpp  shaderManager.h  structs.h  textureAtlas.cpp  textureAtlas.h  voxParser.cpp  voxParser.h  voxelRegistry.cpp  voxelRegistry.h  window.cpp  window.h  world.cpp  world.h  worldRenderer.cpp  worldRenderer.h
src/primitives/: cube.cpp  cube.h  cubeMap.cpp  cubeMap.h  mesh.cpp  mesh.h
src/scenes/: colorsScene.cpp  colorsScene.h  cubeMultiScene.cpp  cubeMultiScene.h  cubeScene.cpp  cubeScene.h  menuScene.cpp  menuScene.h  squareScene.cpp  squareScene.h  testScene.cpp  testScene.h  triangleScene.cpp  triangleScene.h  worldScene.cpp  worldScene.h
src/shaders/: Globals.md  basic.frag.glsl  basic.vert.glsl  blur.frag.glsl  colors.vert.glsl  forward.frag.glsl  geometry.frag.glsl  geometry.vert.glsl  lightCube.frag.glsl  lightCube.vert.glsl  lit.frag.glsl  lit.vert.glsl  post.vert.glsl  simple.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  ssao.frag.glsl  unlit.frag.glsl  water.frag.glsl  water.vert.glsl
